Fixed bug that occured while displaying on smaller screens.

--- a/DailyHabits.Web/ClientApp/src/components/calendar/Calendar.css
+++ b/DailyHabits.Web/ClientApp/src/components/calendar/Calendar.css
@@ -17,6 +17,7 @@
 	padding: 15px;
 	display: flex;
 	align-items: center;
+	margin: auto;
 }
 
 	.calendar-flow .calendar-flow-description {
